# Zombies-Bevy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  vercel.json
src/: ambient.rs  art.rs  camera.rs  combat.rs  common.rs  enemy.rs  gear.rs  hud.rs  input.rs  main.rs  nav.rs  player.rs  vehicle.rs  weapons.rs  world.rs
web/: index.html
web/pkg/: zombies_bevy.js
