[package]
name = "zombies-bevy"
version = "0.25.0"
edition = "2021"
description = "Zombies: Escape the Horde — a high-density pixel-art top-down zombie shooter, rebuilt in Bevy."

[dependencies]
rand = "0.8"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "bevy_window",
  "webgl2",
  "x11",
  "default_font",
]

# getrandom on wasm needs the js backend so rand works in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Fast, small release builds for the web.
[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"

# Speed up dev iteration a touch without wrecking runtime perf.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
